--- a/example/style.css
+++ b/example/style.css
@@ -229,7 +229,8 @@ h2 {
 
 
 
-.back-page {
+.back-page,
+.output-json-link {
     position: fixed;
     padding: 5px 13px;
     background: #678efe;
@@ -241,12 +242,18 @@ h2 {
     top: 5px;
 }
 
-.back-page:hover {
+.back-page:hover,
+.output-json-link:hover{
     color: #fff;
     background: #275efe;
 }
 
-
+.output-json-link {
+    border-radius: 30px 0 0 30px;
+    right: 0;
+    left: auto;
+    top: 5px;
+}
 
 .menu-links a {
     display: block;
