--- a/example/style.css
+++ b/example/style.css
@@ -294,7 +294,7 @@ hr {
     z-index: 1;
 }
 
-.back-page:hover{
+.back-page:hover {
     background: #275efe;
 }
 
@@ -340,24 +340,31 @@ hr {
 .badge-red.badge::before {
     background-color: red;
 }
+
 .badge-green.badge::before {
     background-color: #45a049;
 }
+
 .badge-blue.badge::before {
     background-color: #0f53cc;
 }
+
 .badge-purple.badge::before {
     background-color: #b70bde;
 }
+
 .badge-orange.badge::before {
     background-color: #de830b;
 }
+
 .badge-pink.badge::before {
     background-color: #de0b9b;
 }
+
 .badge-yellow.badge::before {
     background-color: #f6e700;
 }
+
 .badge-light-green.badge::before {
     background-color: #00ea04;
 }
@@ -427,11 +434,19 @@ hr {
     gap: 1rem;
 }
 
+.head-title {
+    margin: 10px 0;
+    display: block;
+    font-weight: bold;
+    font-size: 20px;
+}
+
 .news-box {
     display: inline-block;
     margin-bottom: 15px;
     text-decoration: none;
 }
+
 .news-box .thumbnail {
     position: relative;
     height: 180px;
@@ -440,10 +455,12 @@ hr {
     width: 100%;
     box-shadow: 1px 1px 3px 0 #c7c7c7;
 }
+
 .news-box .thumbnail img {
     width: 100%;
     min-height: 140px;
 }
+
 .news-box .date,
 .news-box .sourceLabel {
     background: rgba(0, 0, 0, 0.73);
@@ -454,14 +471,17 @@ hr {
     position: absolute;
     font-size: 80%;
 }
+
 .news-box .date {
     right: 6px;
     top: 6px;
 }
+
 .news-box .sourceLabel {
     left: 6px;
     bottom: 6px;
 }
+
 .news-box .title {
     padding: 2px;
     margin: 6px 0;
