--- a/example/style.css
+++ b/example/style.css
@@ -583,3 +583,40 @@ hr {
     padding: 2px;
     margin: 6px 0;
 }
+
+
+.award-Winner {
+    background: green;
+    color: white;
+    padding: 2px;
+    border-radius: 5px;
+}
+
+details {
+    border: 1px solid #aaa;
+    border-radius: 4px;
+    padding: 0.5em 0.5em 0;
+    margin-bottom: 5px;
+}
+
+summary {
+    font-weight: bold;
+    margin: -0.5em -0.5em 0;
+    padding: 0.5em;
+    background: #f3f3f3;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+details[open] {
+    padding: 0.5em;
+}
+
+details[open] summary {
+    border-bottom: 1px solid #aaa;
+    margin-bottom: 0.5em;
+}
+
+details div {
+    padding: 0 0 0 20px;
+}
